gcc/testsuite/rust/rustc/ui/higher-ranked/trait-bounds/hang-on-deeply-nested-dyn_dg.rs
//@ normalize-stderr-test: "long-type-\d+" -> "long-type-hash"

fn id(
    f: &dyn Fn(u32),
) -> &dyn Fn(
    &dyn Fn(
        &dyn Fn(
            &dyn Fn(&dyn Fn(&dyn Fn(&dyn Fn(&dyn Fn(&dyn Fn(&dyn Fn(&dyn Fn(&dyn Fn(u32))))))))),
        ),
    ),
) {
    f
// { dg-error ".E0308." "" { target *-*-* } .-1 }
}

fn main() {}

